deploy/httpserver_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: web
spec:
  ports:
    - name: "web"
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpserver
